# crew_shop_backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  commands.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  runner.py
.github/workflows/: build-image.yml  ci.yml  deploy-prod.yml  deploy-stage.yml  tests.yml
alembic/: env.py
alembic/scripts/: migrate.sh  migration_scripts.md
alembic/versions/: 2026_05_24_1034-f7e00cc886fd_create_auth_tables.py  2026_05_24_1057-cff5f80e0d74_create_sessions_table.py  2026_05_27_0640-1a202060566b_create_catalog_tables.py  2026_05_27_0704-e38361f22261_create_ratings_tables.py  2026_05_27_0833-03c347c01bed_create_orders_and_points_tables.py  2026_05_28_1900-ff2257ab755e_create_subscription_tables.py  2026_05_28_1907-a7e3733547a5_create_order_payments_table.py  2026_05_28_1918-f8b6a35b75ea_add_subscription_frequency_column.py  2026_05_28_2026-2848920356cc_create_payment_methods_table.py  2026_05_30_0000-b1c2d3e4f5a6_rename_categories_to_product_categories.py  2026_05_30_0100-c7d8e9f0a1b2_category_product_type_and_filter_indexes.py  2026_07_22_0900-d4e5f6a7b8c9_anchor_users_to_crew_auth_identity.py
docker/: Dockerfile
scripts/: seed_dev.py
src/: __init__.py  bootstrap.py
src/api/: app.py  exception_handlers.py  exceptions.py
src/auth/: cookies.py  crew_auth.py  dependencies.py  enums.py  exceptions.py  identity.py  jwks.py  models.py  providers.py  service.py  sessions.py  tokens.py
src/catalog/: __init__.py  enums.py  exceptions.py
src/orders/: __init__.py  enums.py  models.py  (+5 more)
(+118 files in other folders)
